# bc-bridge

./: .deploykey.enc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.adoc  CHANGELOG.md  CMakeLists.txt  README.md  bridge.c  main.c  paho-mqtt-src-CMakeLists.txt.diff  tags.c  tags.h
FT260/: FT260.py  I2C.py  Node.py  UART.py  ft260.py  ft260.txt  tools.py
FT260/tag/: Humidity.py
bcl/: CMakeLists.txt
bcl/inc/bc/: bridge.h  common.h  os.h  tag.h  tick.h
bcl/inc/bc/i2c/: app.h  sc16is740.h  sys.h  tca9534a.h
bcl/inc/bc/module/: co2.h  relay.h
bcl/inc/bc/tag/: accelerometer.h  barometer.h  humidity.h  lux_meter.h  temperature.h
bcl/inc/bc/tag/chip/: opt3001.h  tmp112.h
bcl/src/bc/: os.c  tag.c  tick.c
bcl/src/bc/i2c/: app.c  sc16is740.c  sys.c  tca9534a.c
bcl/src/bc/module/: co2.c  relay.c
bcl/src/bc/tag/: accelerometer.c  barometer.c  humidity.c  lux_meter.c  temperature.c
bridge/: bridge.c  bridge.h  bridge.h.in
cmake/: CPackProjectConfig.cmake  Findargp.cmake
ft260/: CMakeLists.txt  ft260.c  ft260.h  ft260.py  i2c.py  node.py  tools.py  uart.py
ft260/tag/: Humidity.py
jsmn/: CMakeLists.txt
script/: ci-build  ci-deploy  ci-install  travis-decrypt  utils.sh
src/: application.c  application.h  application_out.c  application_out.h  bc_base64.c  bc_base64.h  bc_bridge.c  bc_bridge.h  bc_common.h  bc_gfx.c  bc_gfx.h  bc_i2c.c  bc_i2c.h  bc_i2c_app.c  bc_i2c_app.h  bc_i2c_pca9535.c  bc_i2c_pca9535.h  bc_i2c_sc16is740.c  bc_i2c_sc16is740.h  bc_i2c_ssd1306.c  bc_i2c_ssd1306.h  bc_i2c_sys.c  bc_i2c_sys.h  bc_i2c_tca9534a.c  bc_i2c_tca9534a.h  bc_log.c  bc_log.h  bc_module_co2.c  bc_module_co2.h  bc_module_relay.c  bc_module_relay.h  bc_os.c  bc_os.h  bc_tag.c  bc_tag.h  bc_tag_accelerometer.c  bc_tag_accelerometer.h  bc_tag_barometer.c  bc_tag_barometer.h  bc_tag_humidity.c  (+38 more)
systemd/: bc-bridge.service  postinst  prerm
tools/: bus_status.py
